Implement design switcher in set-1.html
Added a design switcher for multiple design sets.

--- a/set-1.html
+++ b/set-1.html
@@ -127,6 +127,13 @@
         <h2 class="text-4xl lg:text-6xl mb-8">Ready to simplify your <br> next project?</h2>
         <button class="bg-white text-[#1B2B48] px-12 py-5 rounded-full font-bold uppercase text-xs tracking-widest hover:scale-105 transition-all">Work With Us</button>
     </section>
-
+<div style="position: fixed; bottom: 20px; right: 20px; background: white; padding: 15px; border-radius: 10px; box-shadow: 0 4px 20px rgba(0,0,0,0.1); display: flex; gap: 10px; z-index: 9999;">
+    <span style="font-size: 12px; font-weight: bold; color: #666; align-self: center; margin-right: 5px;">SWITCH DESIGN:</span>
+    <a href="index.html" style="background: #1B2B48; color: white; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-size: 12px;">Main</a>
+    <a href="set-1.html" style="background: #eee; color: #333; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-size: 12px;">Set 1</a>
+    <a href="set-2.html" style="background: #eee; color: #333; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-size: 12px;">Set 2</a>
+    <a href="set-3.html" style="background: #eee; color: #333; padding: 5px 10px; border-radius: 5px; text-decoration: none; font-size: 12px;">Set 3</a>
+</div>
 </body>
+
 </html>
