Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
             <div class="grid md:grid-cols-3 gap-0 border-2 border-slate-900">
                 <div class="bg-white p-10 border-b-2 md:border-b-0 md:border-r-2 border-slate-900 group hover:bg-sp-navy hover:text-white transition-all duration-300">
                     <span class="text-4xl font-black opacity-10 group-hover:opacity-30">01</span>
-                    <h3 class="text-3xl font-bold mt-4 mb-6 italic">BUILDING <br> AUDIT</h3>
+                    <h3 class="text-3xl font-bold mt-4 mb-6 italic">STRUCTURAL  <br> & MEP DESIGN </h3>
                     <p class="text-sm leading-relaxed mb-8 opacity-70">Ensuring stability through rigorous structural health monitoring and safety compliance checks.</p>
                     <div class="h-1 w-12 bg-sp-blue"></div>
                 </div>
 
                 <div class="bg-white p-10 border-b-2 md:border-b-0 md:border-r-2 border-slate-900 group hover:bg-sp-navy hover:text-white transition-all duration-300">
                     <span class="text-4xl font-black opacity-10 group-hover:opacity-30">02</span>
-                    <h3 class="text-3xl font-bold mt-4 mb-6 italic">CONSTRUCTION <br> MANAGEMENT</h3>
+                    <h3 class="text-3xl font-bold mt-4 mb-6 italic"> BUILDING <br>  & AUDIT</h3>
                     <p class="text-sm leading-relaxed mb-8 opacity-70">Overseeing site integrity and execution standards from ground-breaking to handover.</p>
                     <div class="h-1 w-12 bg-sp-blue"></div>
                 </div>
 
                 <div class="bg-white p-10 group hover:bg-sp-navy hover:text-white transition-all duration-300">
                     <span class="text-4xl font-black opacity-10 group-hover:opacity-30">03</span>
-                    <h3 class="text-3xl font-bold mt-4 mb-6 italic">STRUCTURAL <br> & MEP DESIGN</h3>
+                    <h3 class="text-3xl font-bold mt-4 mb-6 italic"> CONSTRUCTION <br>MANAGEMENT </h3>
                     <p class="text-sm leading-relaxed mb-8 opacity-70">Detailed technical blueprints and system planning engineered for maximum efficiency.</p>
                     <div class="h-1 w-12 bg-sp-blue"></div>
                 </div>
@@ -135,3 +135,4 @@
 </body>
 
 </html>
+
