--- a/set-3.html
+++ b/set-3.html
@@ -117,8 +117,8 @@
                     <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?auto=format&fit=crop&q=80" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <span class="bg-blue-100 text-blue-600 text-[10px] font-bold px-2 py-1 rounded uppercase">Safety First</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">Building Audit</h3>
-                        <p class="text-sm text-slate-500 mb-6">Expert structural health checks to ensure your building is safe and long-lasting.</p>
+                        <h3 class="text-xl font-bold mt-2 mb-4">Design</h3>
+                        <p class="text-sm text-slate-500 mb-6">Simplified Structural and MEP blueprints designed for modern infrastructure.</p>
                         <button class="text-brand-orange font-bold text-sm">Know More →</button>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                     <img src="https://images.unsplash.com/photo-1541888946425-d81bb19480c5?auto=format&fit=crop&q=80" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <span class="bg-orange-100 text-brand-orange text-[10px] font-bold px-2 py-1 rounded uppercase">Expert Oversight</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">Construction</h3>
-                        <p class="text-sm text-slate-500 mb-6">Professional site management and end-to-end building execution services.</p>
+                        <h3 class="text-xl font-bold mt-2 mb-4"> Building Audit</h3>
+                        <p class="text-sm text-slate-500 mb-6">Expert structural health checks to ensure your building is safe and long-lasting</p>
                         <button class="text-brand-orange font-bold text-sm">Know More →</button>
                     </div>
                 </div>
@@ -135,8 +135,8 @@
                     <img src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&q=80" class="h-48 w-full object-cover">
                     <div class="p-6">
                         <span class="bg-blue-100 text-blue-600 text-[10px] font-bold px-2 py-1 rounded uppercase">Precision Design</span>
-                        <h3 class="text-xl font-bold mt-2 mb-4">Design</h3>
-                        <p class="text-sm text-slate-500 mb-6">Simplified Structural and MEP blueprints designed for modern infrastructure.</p>
+                        <h3 class="text-xl font-bold mt-2 mb-4"> Construction</h3>
+                        <p class="text-sm text-slate-500 mb-6">Professional site management and end-to-end building execution services</p>
                         <button class="text-brand-orange font-bold text-sm">Know More →</button>
                     </div>
                 </div>
@@ -179,3 +179,4 @@
 </body>
 
 </html>
+
